Fixing banner z-index

--- a/assets/css/bannerSlider.css
+++ b/assets/css/bannerSlider.css
@@ -11,7 +11,7 @@
 	max-width: 1138px;
 	max-height:360px;
 	margin:0px 0 5px 0;
-	z-index:11;
+	z-index:10;
 	text-align:left; /* reset align=center */
 	font-size: 10px;
 	text-shadow: none; /* fix some user styles */
